Added server, Orders: memory_repository, service
